feat: add book routes + refactor api package
